# AltEgo2

./: Cargo.toml  LICENSE.md  README.md  Trunk.toml
gadgets-maigret/: Cargo.toml
gadgets-maigret/src/: check.rs  lib.rs  runner.rs  sites.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs
src-ui/: Cargo.toml  index.html
src-ui/public/css/: input.css
src-ui/public/scss/: main.scss
src-ui/src/: actions.rs  app.rs  gadgets.rs  hotkeys.rs  lib.rs  main.rs  state.rs  tauri_bridge.rs  theme.rs
src-ui/src/components/: canvas.rs  canvas_edge.rs  canvas_grid.rs  canvas_node.rs  context_menu.rs  gadget_panel.rs  icons.rs  menu_bar.rs  mod.rs  palette.rs  right_sidebar.rs  title_bar.rs  zoom_controls.rs
