[package]
name = "src_ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
tauri-wasm-rs = { git = "https://github.com/p1mo/tauri-wasm", tag = "v0.1.3-dev", features = [
        "all", # for all api bindings
        "plugin-all" # for all plugin bindings. should you do this? no.
] }
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
# Frontend only needs the serde types — no reqwest / tokio in the WASM
# bundle. `default-features = false` disables the `native` feature.
gadgets-maigret = { path = "../gadgets-maigret", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "Storage",
    "MediaQueryList",
    "DataTransfer",
    "DragEvent",
    "PointerEvent",
    "WheelEvent",
    "KeyboardEvent",
    "MouseEvent",
    "EventTarget",
    "DomRect",
    "CssStyleDeclaration",
    "SvgsvgElement",
    "SvgGraphicsElement",
    "DomPoint",
    "DomPointReadOnly",
    "EventListener",
    "AddEventListenerOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
leptosfmt = "0.1"
